<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="51dp"
    android:orientation="vertical"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageButton
            android:id="@+id/action_home_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1.3"
            android:background="@color/white"
            android:contentDescription="@string/big_owl"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_home" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/action_schedule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/schedule"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_schedule"
            android:tint="?attr/colorPrimary" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/action_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/user"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_user"
            android:tint="?attr/colorPrimary" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/action_notification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/notification"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_notification"
            android:tint="?attr/colorPrimary" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/action_overflow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/overflow_menu"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_overflow"
            android:tint="?attr/colorPrimary" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />

    <ProgressBar
        android:id="@+id/database_progress_bar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:indeterminate="true"
        android:indeterminateOnly="true"
        android:max="100"
        android:progress="0"
        android:visibility="invisible" />
</LinearLayout>